--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   flutter_inappwebview:
   wakelock:
+  toast:
 
 
   # The following adds the Cupertino Icons font to your application.
